[tool.poetry]
name = "pickle-wins"
version = "0.1.0"
description = ""
authors = ["Noah Crocker <vertigoetrex@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
matplotlib = "^3.4.2"
ax-platform = "^0.1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
